<resources>
    <string name="app_name">Job Need</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_num">Phone number</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">or</string>
    <string name="fb_login">Login using Facebook</string>
    <string name="not_account">Do not have an account?</string>
    <string name="sign_up_here">Sign up</string>
    <string name="employer">Employer</string>
    <string name="employee">Employee</string>
</resources>
